Added missing file.

--- a/utility/utility_vc11.vcxproj
+++ b/utility/utility_vc11.vcxproj
@@ -192,6 +192,7 @@
   <ItemGroup>
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="shellhlp.cpp" />
+    <ClCompile Include="stringutility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base.h" />
