Static linking against the CRT and standard C++ libraries.

--- a/litestep/litestep_vc12.vcxproj
+++ b/litestep/litestep_vc12.vcxproj
@@ -173,7 +173,7 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ole32.lib;uuid.lib;shlwapi.lib;advapi32.lib;gdi32.lib;shell32.lib;user32.lib;msvcrt.lib;msvcprt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ole32.lib;uuid.lib;shlwapi.lib;advapi32.lib;gdi32.lib;shell32.lib;user32.lib;libcmt.lib;libcpmt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>NotSet</ShowProgress>
       <OutputFile>$(OutDir)litestep.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -214,7 +214,7 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ole32.lib;uuid.lib;shlwapi.lib;advapi32.lib;gdi32.lib;shell32.lib;user32.lib;msvcrt.lib;msvcprt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ole32.lib;uuid.lib;shlwapi.lib;advapi32.lib;gdi32.lib;shell32.lib;user32.lib;libcmt.lib;libcpmt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>NotSet</ShowProgress>
       <OutputFile>$(OutDir)litestep.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
