--- a/lsapi/lsapi.vcxproj
+++ b/lsapi/lsapi.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{2FECA0A4-CB2F-44CA-97AB-DE78EBBDECFA}</ProjectGuid>
     <RootNamespace>lsapi</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>"Windows"</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -63,6 +64,9 @@
     <Import Project="..\litestep.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <OutDir>$(SolutionDir)bin\$(Configuration)_$(PlatformTarget)\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PreprocessorDefinitions>LSAPI_INTERNAL;LSAPI_PRIVATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
